# GenAI-Master

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  notes.txt  pyproject.toml
docker/: api.Dockerfile  worker.Dockerfile
src/app/: main.py
src/app/api/: documents.py  health.py
src/app/core/: celery_app.py  config.py  logging.py
src/app/models/: document.py
src/app/services/: document_status.py  file_upload.py  ingestion_service.py
src/app/tasks/: ingest_document.py
src/app/workers/: worker.py
